# Stonks

./: .dockerignore  .env  .pre-commit-config.yaml  Dockerfile  README.md  button.py  config.py  constants.py  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt  setup.cfg  utils.py
.github/workflows/: codiga.yml  python-refurb.yml  python_black_code_formatter.yml  wemake-python-styleguide.yml
api/: __init__.py  coingecko.py  coinmarketcap.py
cogs/: market_aggregator.py  monthly_draw.py
coinmarketcap_utils/: Cargo.toml  pyproject.toml
coinmarketcap_utils/binaries/: coinmarketcap_utils-0.1.0-cp38-none-win_amd64.whl  coinmarketcap_utils-0.1.0-cp39-cp39-manylinux_2_28_armv7l.whl
coinmarketcap_utils/src/: lib.rs
